# cloud-platform

./: .gitignore  Dockerfile  INFRA_ARCHITECURE.md  README.md  mypy.ini  pyproject.toml  readme-1.md
.github/workflows/: cd-buildx.yml  cd.yml  ci.yml  readme.md
infra/ansible/: ansible.md  readme.md  test.yml
infra/ansible/inventories/dev/: inventory.ini
infra/ansible/playbooks/: install_script.yml  worker_bootstrap.sh
infra/kubernetes/: README.md  app-install.md  kserver.md  kubeflow.md  ml-pipline.md  mlflow.md  readme.md
infra/kubernetes/apps/: app-dev.yaml
infra/kubernetes/bootstrap/: README.md  root-app.yaml
infra/kubernetes/helm/grafana/: Chart.yaml
infra/kubernetes/helm/loki/: Chart.yaml
infra/kubernetes/helm/platform/: Chart.yaml  values-monitoring.yaml
infra/kubernetes/helm/prometheus/: chart.yaml  values.yaml
infra/kubernetes/helm/promtail/: Chart.yaml
infra/kubernetes/helm/trading/: Chart.yaml  values.yaml
infra/monitoring/cloud-watch/: monitor-programe-crash.md
infra/scripts/: master_bootstrap.sh  monitor.sh
infra/terraform/: README.md
infra/terraform/environments/dev/: backend.tf  providers.tf  variables.tf
other/project-cka-cluster/: readme.md
other/project-cka-cluster/doc/: get_logs_events.md  prepare_test.yaml  vim.md
other/project-cka-cluster/ec2-manual-cluster/: main.tf  outputs.tf  readme.md  variables.tf
other/project-terraform-demo/: backend.tf  main.tf  outputs.tf  readme.md  variables.tf
src/: READMRE.md  config.py  dynamo_repository.py  main.py  s3_service.py
tests/: k6_test.js  test_service.py
(+48 files in other folders)
